--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     ]
   },
   "devDependencies": {
+    "modern-normalize": "^1.1.0",
     "prettier": "2.7.1",
-    "react-router-dom": "^6.3.0"
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5"
   }
 }
