--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=production craco start",
-    "devStart": "NODE_ENV=development craco start",
+    "serverStart": "NODE_ENV=development craco start",
     "build": "craco build --force",
     "test": "craco test",
     "eject": "react-scripts eject"
