Fix prismJS not showing color

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "clipboard": "^2.0.11",
     "craco": "^0.0.3",
     "date-fns": "^2.29.3",
+    "highlight.js": "^11.6.0",
     "html-react-parser": "^3.0.4",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
