--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "@craco/craco": "^6.4.5",
+    "@craco/craco": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "clipboard": "^2.0.11",
-    "craco": "^0.0.3",
     "date-fns": "^2.29.3",
     "highlight.js": "^11.6.0",
     "html-react-parser": "^3.0.4",
@@ -16,13 +15,17 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "socket.io-client": "^4.5.3",
+    "modern-normalize": "^1.1.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "NODE_ENV=production craco start",
     "serverStart": "NODE_ENV=development craco start",
-    "build": "craco build --force",
+    "build": "CI=false && craco build --force",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
@@ -45,10 +48,6 @@
     ]
   },
   "devDependencies": {
-    "modern-normalize": "^1.1.0",
-    "prettier": "2.7.1",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "prettier": "2.7.1"
   }
 }
